# skillsops

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/actions/audit/: action.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
.planning/: GTM.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: 0-architecture.md  1-skill-format.md  2-evaluation.md  3-security-audit.md  4-optimization.md  5-installation.md  ARCHITECTURE.md  EVAL_SUITE.md  REFERENCE.md  SECURITY_AUDIT.md  comparison-aws-agent-registry.md
docs/superpowers/specs/: 2026-04-27-coverage-push-design.md  2026-04-28-landing-page-design.md
examples/basic-skill/evals/: report.json
examples/workflows/: skill-audit.yml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/scripts/: mcp_server.py
plugin/skills/create-skill/: SKILL.md
plugin/skills/diagnose-skill/: SKILL.md
plugin/skills/skill-lifecycle/: SKILL.md
site/: index.html
skillctl/: __init__.py  _cli_helpers.py  _secure.py  cli.py  config.py  github_auth.py  install.py  manifest.py  store.py  utils.py  validator.py  version.py
skillctl/eval/: cli.py  config.py  cost.py  errors.py  explanations.py  init.py  report.py  schemas.py  trigger.py  version.py
skillctl/eval/audit/: permission_analyzer.py  quality_check.py  security_scan.py  structure_check.py
skillctl/optimize/: cli.py  eval_runner.py  llm_client.py  loop.py  types.py  variant_generator.py
skillctl/registry/: api.py  audit.py  auth.py  config.py  db.py  github_backend.py  server.py  storage.py  web.py
skillctl/registry/templates/: evaluate.html
tests/: test_api.py  test_apply_skill.py  test_audit.py  test_auth.py  test_cli_smoke.py  test_content_store.py  test_cost_extended.py  test_doctor.py  test_eval_github_format.py  test_eval_schemas.py  test_eval_strict_mode.py  test_explanations.py  test_html_report.py  test_install.py  test_integration_bedrock.py  test_llm_client.py  test_manifest.py  test_permission_extended.py  test_plugin_structure.py  test_quality_check.py  test_report_citation.py  test_security.py  test_skillctl_config.py  test_utils.py  test_validate_github_format.py  test_validator.py
