[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillctl"
version = "0.1.0b1"
description = "Governance CLI for agent skills — validate, push, pull, and manage skill manifests"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
optimize = [
    "litellm>=1.83.14",
]
plugin = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
    "hypothesis>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "skillctl[server,optimize,plugin]",
]

[project.scripts]
skillctl = "skillctl.cli:main"

[tool.setuptools.packages.find]
include = ["skillctl*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
per-file-ignores = {"skillctl/**/cli.py" = ["E402"], "skillctl/eval/*.py" = ["E402"]}

[tool.coverage.run]
source = ["skillctl"]
omit = [
    "skillctl/eval/agent_runner.py",
    "skillctl/eval/functional.py",
    "skillctl/eval/grading.py",
    "skillctl/eval/trigger.py",
    "skillctl/eval/compare.py",
    "skillctl/eval/lifecycle.py",
    "skillctl/eval/regression.py",
    "skillctl/eval/init.py",
    "skillctl/github_auth.py",
    "skillctl/registry/github_backend.py",
    "skillctl/registry/server.py",
    "skillctl/registry/config.py",
    "skillctl/cli.py",
    "skillctl/eval/cli.py",
    "skillctl/optimize/cli.py",
]
